--- a/app/src/main/res/layout/fragment_select_date_time.xml
+++ b/app/src/main/res/layout/fragment_select_date_time.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/prevWeekButton" />
+        app:layout_constraintTop_toBottomOf="@+id/listEmployeeSpinner" />
 
     <Button
         android:id="@+id/enrollButton"
@@ -52,4 +52,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/listEmployeeSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/nextWeekButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
