--- a/app/src/main/res/layout/item_service_rv.xml
+++ b/app/src/main/res/layout/item_service_rv.xml
@@ -3,27 +3,40 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/nameServiceTextView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="Замена масла"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toStartOf="@+id/hoursServiceTV"
+        android:theme="@style/valueTheme"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/hoursServiceTV"
-        android:layout_width="40dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="16sp"
         android:text="10 ч."
-        app:layout_constraintStart_toEndOf="@+id/nameServiceTextView"
+        android:theme="@style/valueTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/nameServiceTextView" />
+
+    <TextView
+        android:id="@+id/priceServiceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:theme="@style/valueTheme"
+        android:text="1999 руб."
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nameServiceTextView" />
+    <View
+        android:layout_width="match_parent"
+        android:background="@color/design_default_color_primary"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        app:layout_constraintTop_toBottomOf="@id/priceServiceTextView"
+        android:layout_height="1dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
