--- a/app/src/main/res/layout/services_item_on_list.xml
+++ b/app/src/main/res/layout/services_item_on_list.xml
@@ -7,9 +7,23 @@
 
     <CheckBox
         android:id="@+id/servicesCheckBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/priceServiceTextView"
         tools:text="Замена масла" />
+
+    <TextView
+        android:id="@+id/priceServiceTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="1099 руб."
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/servicesCheckBox"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
