--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="branch_sm_8dp">8dp</dimen>
     <dimen name="branch_em_8dp">8dp</dimen>
     <dimen name="branch_mt_8dp">8dp</dimen>
+    <dimen name="mt_16dp">16dp</dimen>
 </resources>
