--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -70,6 +70,16 @@
             app:layout_constraintTop_toBottomOf="@+id/listCustomersTokenRecyclerView"
             tools:layout_editor_absoluteX="139dp" />
 
+        <Button
+            android:id="@+id/signOutButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:text="Выйти"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addCarButton" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
