--- a/app/src/main/res/layout/fragment_employee.xml
+++ b/app/src/main/res/layout/fragment_employee.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="@dimen/branch_sm_8dp"
     android:layout_marginEnd="@dimen/branch_em_8dp"
     tools:context=".EmployeeFragment">
@@ -53,7 +53,7 @@
         android:text="@string/text_save_branch_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/patronymicEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEmployeeEditText" />
 
     <Button
         android:id="@+id/deleteEmployeeBtn"
@@ -61,8 +61,31 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/branch_mt_8dp"
         android:text="@string/text_delete_branch_btn"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/saveEmployeeButton" />
+
+    <EditText
+        android:id="@+id/loginEmployeeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Почта"
+        android:inputType="textEmailAddress"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/patronymicEditText" />
+
+    <EditText
+        android:id="@+id/passwordEmployeeEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Пароль"
+        android:inputType="textPassword"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@+id/loginEmployeeEditText"
+        tools:layout_editor_absoluteX="42dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
