--- a/app/src/main/res/layout/fragment_token_detail.xml
+++ b/app/src/main/res/layout/fragment_token_detail.xml
@@ -4,44 +4,61 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/branch_sm_8dp"
-    android:layout_marginEnd="@dimen/branch_em_8dp"
     tools:context=".TokenDetailFragment">
 
-
-    <TextView
-        android:id="@+id/titleDateTimeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:text="@string/text_title_dateTime_TV"
-        android:theme="@style/titleTheme"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/dateTimeTextView"
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/valueTheme"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/titleStartDateTimeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:text="@string/text_title_dateTime_TV"
+        android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleDateTimeTextView"
+        app:layout_constraintTop_toBottomOf="@id/include" />
+
+    <TextView
+        android:id="@+id/startDateTimeTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:theme="@style/valueTheme"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleStartDateTimeTextView"
         tools:text="@string/text_date_time_TV" />
 
     <TextView
         android:id="@+id/titleBranchTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_branch_TV"
         android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateTimeTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/startDateTimeTextView" />
 
     <TextView
         android:id="@+id/branchTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:theme="@style/valueTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleBranchTextView"
         tools:text="@string/text_branch_TV" />
@@ -50,8 +67,11 @@
         android:id="@+id/titleEmployeeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_employee_tV"
         android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/branchTextView" />
 
@@ -59,7 +79,10 @@
         android:id="@+id/employeeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:theme="@style/valueTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleEmployeeTextView"
         tools:text="@string/text_employee_TV" />
@@ -68,8 +91,11 @@
         android:id="@+id/titleCarTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_cat_TV"
         android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/employeeTextView" />
 
@@ -77,7 +103,10 @@
         android:id="@+id/carTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:theme="@style/valueTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleCarTextView"
         tools:text="@string/text_car_TV" />
@@ -86,8 +115,11 @@
         android:id="@+id/titleServicesTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_Services_TV"
         android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/priceTextView" />
 
@@ -95,7 +127,10 @@
         android:id="@+id/servicesTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:theme="@style/valueTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleServicesTextView"
         tools:text="@string/text_services_TV" />
@@ -105,17 +140,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:text="@string/text_delete_token_btn"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/servicesTextView"
-        android:text="@string/text_delete_token_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/servicesTextView" />
 
     <TextView
         android:id="@+id/titlePriceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_price_tV"
         android:theme="@style/titleTheme"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/carTextView" />
 
@@ -123,8 +162,21 @@
         android:id="@+id/priceTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="@string/text_price_tV"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:theme="@style/valueTheme"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/titlePriceTextView"
-        tools:layout_editor_absoluteX="152dp" />
+        tools:layout_editor_absoluteX="152dp"
+        tools:text="@string/text_price_tV" />
+
+    <ProgressBar
+        android:id="@+id/descTokenProgressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 </androidx.constraintlayout.widget.ConstraintLayout>
