--- a/app/src/main/res/layout/fragment_branch.xml
+++ b/app/src/main/res/layout/fragment_branch.xml
@@ -1,74 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/branch_sm_8dp"
-    android:layout_marginEnd="@dimen/branch_em_8dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".BranchFragment">
 
-    <ImageView
-        android:id="@+id/iconImageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_business_24" />
-
-    <TextView
-        android:id="@+id/addressBranchTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:textSize="20sp"
-        android:text="г. Ульяновск\nул. Промышленная д. 8"
-        app:layout_constraintStart_toEndOf="@+id/iconImageView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/phoneBranchTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:layout_marginStart="@dimen/branch_sm_8dp"
-        android:textSize="18sp"
-        android:text="Тел: 89256412123"
-        app:layout_constraintStart_toEndOf="@+id/iconImageView"
-        app:layout_constraintTop_toBottomOf="@+id/addressBranchTextView" />
-
-    <TextView
-        android:id="@+id/titleEmployeeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Сотрудники:"
-        android:layout_margin="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iconImageView" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listEmployeeRecyclerView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/titleEmployeeTextView"
-        tools:layout_editor_absoluteX="79dp" />
-    <Button
-        android:id="@+id/addEmployeeButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="+ Добавить сотрудника"
-        app:layout_constraintTop_toBottomOf="@+id/listEmployeeRecyclerView" />
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/editButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Изменить"
-        app:layout_constraintTop_toBottomOf="@+id/addEmployeeButton"
-        tools:layout_editor_absoluteX="137dp" />
+        <include
+            android:id="@+id/include"
+            layout="@layout/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iconImageView"
+            android:layout_width="@dimen/width_icon_branch"
+            android:layout_height="@dimen/width_icon_branch"
+            android:contentDescription="@string/desc_icon_image_view"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/include"
+            app:srcCompat="@drawable/ic_baseline_business_24" />
+
+        <TextView
+            android:id="@+id/addressBranchTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/branch_sm_8dp"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:theme="@style/valueTheme"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/iconImageView"
+            app:layout_constraintTop_toBottomOf="@id/include"
+            tools:text="г. Ульяновск ул. Промышленная д. 8" />
+
+        <TextView
+            android:id="@+id/phoneBranchTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/branch_sm_8dp"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:theme="@style/titleTheme"
+            android:visibility="gone"
+            app:layout_constraintStart_toEndOf="@+id/iconImageView"
+            app:layout_constraintTop_toBottomOf="@+id/addressBranchTextView"
+            tools:text="Тел: 89256412123" />
+
+        <TextView
+            android:id="@+id/titleEmployeeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/mt_16dp"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:text="@string/text_titleEmployees_text_view"
+            android:theme="@style/valueTheme"
+            android:visibility="gone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iconImageView" />
+
+        <TextView
+            android:id="@+id/addNewEmployeeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:layout_marginEnd="@dimen/mt_16dp"
+            android:text="@string/text_add_textView"
+            android:theme="@style/actionTextView"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iconImageView" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listEmployeeRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/branch_sm_8dp"
+            android:layout_marginTop="@dimen/branch_mt_8dp"
+            android:layout_marginEnd="@dimen/branch_em_8dp"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toBottomOf="@+id/titleEmployeeTextView" />
+
+        <ProgressBar
+            android:id="@+id/branchProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.core.widget.NestedScrollView>
