--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,8 @@
     <dimen name="branch_mt_8dp">8dp</dimen>
     <dimen name="mt_16dp">16dp</dimen>
     <dimen name="width_icon_user">120dp</dimen>
+    <dimen name="corner_radius_8dp">8dp</dimen>
+    <dimen name="card_elevation_8dp">8dp</dimen>
+    <dimen name="mt_20dp">20dp</dimen>
+    <dimen name="width_icon_branch">100dp</dimen>
 </resources>
