--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -4,21 +4,37 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/branch_sm_8dp"
-    android:layout_marginEnd="@dimen/branch_em_8dp"
     tools:context=".ServicesFragment">
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/nameServiceEditText"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:ems="10"
         android:inputType="text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleNameTextView" />
 
-    <EditText
+    <NumberPicker
+        android:id="@+id/hoursServiceNumberPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleCountHoursTextView" />
+
+    <!--<EditText
         android:id="@+id/countHoursServiceEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -26,16 +42,16 @@
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />-->
 
     <TextView
         android:id="@+id/titleCountHoursTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:layout_marginTop="16dp"
         android:text="@string/text_title_hours_service_TV"
         android:theme="@style/titleTheme"
-        app:layout_constraintEnd_toStartOf="@+id/countHoursServiceEditText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameServiceEditText" />
@@ -44,52 +60,35 @@
         android:id="@+id/titleNameTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:text="@string/text_title_name_service_TV"
         android:theme="@style/titleTheme"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/include" />
 
     <TextView
         android:id="@+id/priceServiceTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:text="@string/text_title_price_service"
         android:theme="@style/titleTheme"
-        app:layout_constraintEnd_toStartOf="@+id/priceServiceEditText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countHoursServiceEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/hoursServiceNumberPicker" />
 
     <EditText
         android:id="@+id/priceServiceEditText"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:ems="10"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/countHoursServiceEditText" />
-
-    <Button
-        android:id="@+id/saveServiceButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/mt_16dp"
-        android:text="@string/text_save_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/priceServiceEditText" />
-
-    <Button
-        android:id="@+id/deleteServicesButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/text_delete_Btn"
-        android:layout_marginTop="@dimen/mt_16dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/saveServiceButton" />
+        app:layout_constraintTop_toBottomOf="@+id/priceServiceTextView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
