--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/actionEdit"
-        android:icon="@drawable/ic_baseline_edit_24"
-        app:showAsAction="always"
-        android:title="@string/textedit"/>
-
+    <item android:id="@+id/actionOk"
+        android:title="@string/text_menu_save"
+        android:icon="@drawable/ic_baseline_check_24"
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/actionExit"
         android:icon="@drawable/ic_baseline_exit_to_app_24"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         android:title="@string/text_exit"/>
 </menu>
