--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,15 @@
     <style name="AppBar.Title" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">21sp</item>
+    </style>
 
+    <style name="actionTextView">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/teal_200</item>
+    </style>
+
+    <style name="CardViewTheme">
+        <item name="cardCornerRadius">8dp</item>
+        <item name="cardElevation">8dp</item>
     </style>
 </resources>
