--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="60dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/adminBottomNavigationView"
@@ -20,7 +21,8 @@
         app:itemIconTint="@color/button_app_item_foreground"
         app:itemTextColor="@color/button_app_item_foreground"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/purple_500"
-        app:menu="@menu/bottom_menu_admin" />
+        android:visibility="gone"
+        app:menu="@menu/bottom_menu_admin"
+        android:background="@color/purple_500" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
