--- a/app/src/main/res/layout/fragment_car_detail.xml
+++ b/app/src/main/res/layout/fragment_car_detail.xml
@@ -4,66 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="@dimen/branch_sm_8dp"
-    android:layout_marginEnd="@dimen/branch_em_8dp"
     tools:context=".CarDetailFragment">
+
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/makeCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:layout_marginTop="@dimen/branch_mt_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:ems="10"
-        android:hint="Марка"
+        android:hint="@string/text_hint_make_car"
         android:inputType="text"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <EditText
         android:id="@+id/modelCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:ems="10"
-        android:hint="Модель"
+        android:hint="@string/text_hint_model_car"
         android:inputType="text"
         app:layout_constraintTop_toBottomOf="@+id/makeCarEditText" />
 
     <EditText
         android:id="@+id/numberCarEditText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:autofillHints="creditCardNumber"
         android:ems="10"
-        android:hint="Номер"
+        android:hint="@string/text_number_car"
         android:inputType="textCapWords"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
         android:maxLength="6"
+        app:layout_constraintEnd_toStartOf="@+id/numberRegionEditText"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modelCarEditText" />
 
     <EditText
         android:id="@+id/yearCarEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/branch_sm_8dp"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
         android:ems="10"
-        android:hint="Год выпуска"
+        android:hint="@string/text_hint_year_car"
         android:inputType="number"
         android:maxLength="4"
-        app:layout_constraintTop_toBottomOf="@+id/numberCarEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/numberCarEditText"
+        android:autofillHints="creditCardExpirationYear" />
 
-    <Button
-        android:id="@+id/saveCarButton"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/numberRegionEditText"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:text="СОхранить автомобиль"
+        android:ems="10"
+        android:inputType="number"
+        android:layout_marginEnd="@dimen/branch_em_8dp"
+        android:maxLength="2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/yearCarEditText" />
-
-    <Button
-        android:id="@+id/deleteCarButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/branch_mt_8dp"
-        android:text="Удалить"
-        app:layout_constraintTop_toBottomOf="@+id/saveCarButton"
-        tools:layout_editor_absoluteX="128dp" />
+        app:layout_constraintTop_toBottomOf="@+id/modelCarEditText"
+        android:autofillHints="creditCardNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
