--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="card_elevation_8dp">8dp</dimen>
     <dimen name="mt_20dp">20dp</dimen>
     <dimen name="width_icon_branch">100dp</dimen>
+    <dimen name="width_icon_car">150dp</dimen>
+    <dimen name="height_icon_profile_image_view">200dp</dimen>
 </resources>
